# src/recuperacion-password/dtos/GenerarToken.dto.ts
@@ -1,0 +1,13 @@
+import { IsEmail } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+
+export class GenerarTokenDto {
+
+    @ApiProperty({
+        description: 'Correo electrónico del usuario para generar el token de recuperación',
+        example: 'usuario@correo.com',
+    })
+    @IsEmail()
+    email: string;
+}
